<RelativeLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout
        android:id="@+id/layout_top"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/colorBlue">

        <ImageView
            android:id="@+id/imv_back"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:padding="10dp"
            android:src="@drawable/ic_back2"
            android:contentDescription="@string/Back" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginStart="45dp"
            android:layout_marginEnd="45dp"
            android:gravity="center"
            android:text="@string/Chat"
            android:textColor="@color/colorWhite"
            android:textSize="14sp" />

    </RelativeLayout>

    <ViewFlipper
        android:id="@+id/view_flipper_chat_activity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/view_divide"
        android:layout_below="@id/layout_top">

        <ProgressBar
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:indeterminateDrawable="@drawable/custom_progress_bar" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/NoData"
            android:textColor="@color/colorGray800" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/No_Network_connection"
            android:textColor="@color/colorBlack" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcv_messages_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </ViewFlipper>

    <View
        android:id="@+id/view_divide"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_above="@id/layout_bottom"
        android:background="@color/colorGray200" />

    <RelativeLayout
        android:id="@+id/layout_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="6dp">

        <ImageView
            android:id="@+id/imv_mic_chat"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:padding="5dp"
            android:src="@drawable/ic_mic"
            android:contentDescription="@string/Click_On_mic" />

        <EditText
            android:id="@+id/edt_send_chat"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/imv_mic_chat"
            android:layout_toStartOf="@id/imv_send_chat"
            android:background="@drawable/background_edit_content"
            android:padding="4dp"
            android:hint="@string/WhatIsGoingOn"/>

        <ImageView
            android:id="@+id/imv_send_chat"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:padding="8dp"
            android:src="@drawable/ic_send"
            android:contentDescription="@string/Send" />

    </RelativeLayout>

</RelativeLayout>