<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_new_feeds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_new_groups"
            android:textColor="@color/colorBlue"
            android:textSize="25sp"
            android:layout_margin="15dp">
        </TextView>
        <ImageView
            android:id="@+id/imv_add_to_group"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="15dp"
            android:src="@drawable/ic_check"
            android:layout_width="24dp"
            android:layout_height="24dp"
            app:tint="@color/colorBlue"
            android:visibility="gone"
            android:contentDescription="@string/click_on_item_will_show_this">
        </ImageView>
    </RelativeLayout>
    <ViewFlipper
        android:id="@+id/vf_create_groups"
        android:layout_marginTop="55dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:layout_marginTop="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateDrawable="@drawable/custom_progress_bar">
        </ProgressBar>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/NoData">
        </TextView>
        <TextView
            android:id="@+id/tvNoConnect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/No_Network_connection">
        </TextView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_add_user_to_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </androidx.recyclerview.widget.RecyclerView>
    </ViewFlipper>
</RelativeLayout>