<LinearLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Menu"
        android:textColor="@color/colorBlue"
        android:textSize="25sp"
        android:layout_margin="15dp">
    </TextView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="15dp">
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_user2"
            android:id="@+id/civ_menu_avatar">
        </de.hdodenhof.circleimageview.CircleImageView>
        <TextView
            android:id="@+id/tv_menu_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Name"
            android:textSize="18sp"
            android:textColor="@color/colorBlack"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp">
        </TextView>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_go_to_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="15dp">
        <ImageView
            android:padding="4dp"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_profile">
        </ImageView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/GoToProfileActivity"
            android:textSize="18sp"
            android:textColor="@color/colorBlack"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp">
        </TextView>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_friendslist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="15dp">
        <ImageView
            android:padding="4dp"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_friends">
        </ImageView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/FriendsList"
            android:textSize="18sp"
            android:textColor="@color/colorBlack"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp">
        </TextView>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_Logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="15dp">
        <ImageView
            android:padding="4dp"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_logout">
        </ImageView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Logout"
            android:textSize="18sp"
            android:textColor="@color/colorBlack"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp">
        </TextView>
    </LinearLayout>
</LinearLayout>