<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/FriendsList"
            android:textColor="@color/colorBlue"
            android:textSize="25sp"
            android:layout_margin="15dp">
        </TextView>
        <View
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:background="@color/colorGray300">
        </View>
        <ViewFlipper
            android:id="@+id/vf_friends"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ProgressBar
                android:layout_marginTop="40dp"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminateDrawable="@drawable/custom_progress_bar">
            </ProgressBar>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/NoData">
            </TextView>
            <TextView
                android:id="@+id/tvNoConnect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/No_Network_connection">
            </TextView>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_friends"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            </androidx.recyclerview.widget.RecyclerView>
        </ViewFlipper>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>