<LinearLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@drawable/bg_main_authen_activities">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:paddingStart="20dp"
        android:layout_weight="1">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Welcome"
            android:textColor="@color/colorWhite"
            android:textSize="25sp"
            android:layout_gravity="center_vertical">
        </TextView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Log_In"
            android:textColor="@color/colorWhite"
            android:textSize="45sp"
            android:layout_gravity="center_vertical"
            android:textStyle="bold">
        </TextView>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginBottom="50dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp">
                <EditText
                    android:id="@+id/edt_log_in_username"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/bg_box_log_in_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center_vertical"
                    android:textSize="18sp"
                    android:paddingLeft="20dp">
                </EditText>
                <TextView
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:background="@color/colorWhite"
                    android:layout_marginStart="15dp"
                    android:textSize="15sp"
                    android:text="@string/Username"
                    android:textColor="@color/colorBlack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                </TextView>
            </RelativeLayout>
            <RelativeLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp">
                <EditText
                    android:id="@+id/edt_log_in_password"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/bg_box_log_in_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center_vertical"
                    android:textSize="18sp"
                    android:paddingLeft="20dp"
                    android:inputType="textPassword">
                </EditText>
                <TextView
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:background="@color/colorWhite"
                    android:layout_marginStart="15dp"
                    android:textSize="15sp"
                    android:text="@string/Password"
                    android:textColor="@color/colorBlack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                </TextView>
                <ImageView
                    android:id="@+id/imv_hide_show_pass"
                    android:layout_marginEnd="10dp"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_hidepass"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true">

                </ImageView>
            </RelativeLayout>
            <Button
                android:id="@+id/btn_log_in"
                android:layout_marginTop="15dp"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:background="@drawable/bg_button_log_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"
                android:text="@string/Log_In">
            </Button>
            <Button
                android:id="@+id/btn_go_to_register"
                android:layout_marginTop="15dp"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:background="@drawable/bg_box_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorTextBoxLogIn"
                android:text="@string/Register_here">
            </Button>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Developed_By"
                android:layout_gravity="center"
                android:gravity="center_horizontal"
                android:textSize="16sp"
                android:textColor="#2A29E8">
            </TextView>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>