<RelativeLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:id="@+id/tv_new_feeds"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/NewFeeds"
        android:textColor="@color/colorBlue"
        android:textSize="25sp"
        android:layout_margin="15dp">
    </TextView>
    <View
        android:id="@+id/v_first_line"
        android:layout_below="@+id/tv_new_feeds"
        android:layout_width="match_parent"
        android:layout_height="1.5dp"
        android:background="@color/colorGray300">
    </View>
    <ViewFlipper
        android:id="@+id/vf_new_feeds"
        android:layout_below="@id/v_first_line"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ProgressBar
            android:layout_marginTop="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateDrawable="@drawable/custom_progress_bar">
        </ProgressBar>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/NoData">
        </TextView>
        <TextView
            android:id="@+id/tvNoConnect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/No_Network_connection">
        </TextView>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_new_feeds"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </androidx.recyclerview.widget.RecyclerView>
    </ViewFlipper>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_write_post"
        android:layout_width="55dp"
        android:layout_height="55dp"
        app:fabCustomSize="55dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:src="@drawable/ic_pencil"
        android:layout_marginBottom="30dp"
        android:layout_marginEnd="15dp"
        app:backgroundTint="@color/colorBlue"
        app:borderWidth="0dp"
        android:elevation="4dp">
    </com.google.android.material.floatingactionbutton.FloatingActionButton>
</RelativeLayout>