<LinearLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_create_post_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Cancel"
            android:textColor="@color/colorBlue"
            android:layout_margin="10dp">
        </TextView>
        <TextView
            android:id="@+id/tv_create_post"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Post"
            android:textColor="@color/colorBlue"
            android:layout_margin="10dp"
            android:layout_alignParentEnd="true"
            android:visibility="gone">
        </TextView>

    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/civ_create_post_avatar"
            android:layout_width="40dp"
            android:layout_height="40dp">
        </de.hdodenhof.circleimageview.CircleImageView>
        <LinearLayout
            android:layout_marginStart="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <EditText
                android:id="@+id/edt_create_post_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/WhatIsGoingOn"
                android:textColorHint="@color/colorGray500">
            </EditText>
            <androidx.cardview.widget.CardView
                android:layout_marginTop="5dp"
                android:id="@+id/cv_create_post_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="8dp"
                android:elevation="2dp">
                <ImageView
                    android:id="@+id/imv_create_post_image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                </ImageView>
            </androidx.cardview.widget.CardView>
            <RelativeLayout
                android:id="@+id/rl_choose_image"
                android:layout_marginTop="10dp"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/background_layout_camera">
                <ImageView
                    android:layout_centerInParent="true"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_photo_camera">
                </ImageView>
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>